--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </li>
         <li>
           <a href="">
-            <img src="images/img3.jpg" alt="tablet in hand" width="370" />
+            <img src="images\img3.jpg" alt="tablet in hand" width="370" />
           </a>
         </li>
       </ul>
