--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <header>
-    <nav>
-      <a href="/">WebStudio</a>
-      <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </header>
   <body>
+    <header>
+      <nav>
+        <a href="/">WebStudio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+
     <main>
       <!--Шапка-->
       <section>
@@ -69,21 +70,20 @@
       <ul>
         <li>
           <a href="">
-            <img src="images\img1.jpg" alt="Note on tablet" width="370" />
+            <img src="images\\img1.jpg" alt="Note on tablet" width="370" />
           </a>
         </li>
         <li>
           <a href="">
-            <img src="images\img2.jpg" alt="phone and notebook" width="370" />
+            <img src="images\\img2.jpg" alt="phone and notebook" width="370" />
           </a>
         </li>
         <li>
           <a href="">
-            <img src="images\img3.jpg" alt="tablet in hand" width="370" />
+            <img src="images\\img3.jpg" alt="tablet in hand" width="370" />
           </a>
         </li>
       </ul>
-      <img src="" alt="" />
     </section>
 
     <!--Наша команда / Our team (OT)-->
@@ -93,22 +93,22 @@
         <li>
           <h2>Игорь Демьяненко</h2>
           <p>Product Designer</p>
-          <img src="images\OT Igor.jpg" alt="Igor's portrate" width="270" />
+          <img src="images\\OT Igor.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Ольга Репина</h2>
           <p>Frontend Developer</p>
-          <img src="images\OT Olga.jpg" alt="Igor's portrate" width="270" />
+          <img src="images\\OT Olga.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Николай Тарасов</h2>
           <p>Marketing</p>
-          <img src="images\OT Nikolay.jpg" alt="Igor's portrate" width="270" />
+          <img src="images\\OT Nikolay.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Михаил Ермаков</h2>
           <p>UI Designer</p>
-          <img src="images\OT Mikhail.jpg" alt="Igor's portrate" width="270" />
+          <img src="images\\OT Mikhail.jpg" alt="Igor's portrate" width="270" />
         </li>
       </ul>
     </section>
