--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
       <ul>
         <li>
           <a href="">
-            <img src="images\\img1.jpg" alt="Note on tablet" width="370" />
+            <img src="./images/img1.jpg" alt="Note on tablet" width="370" />
           </a>
         </li>
         <li>
           <a href="">
-            <img src="images\\img2.jpg" alt="phone and notebook" width="370" />
+            <img src="./images/img2.jpg" alt="phone and notebook" width="370" />
           </a>
         </li>
         <li>
           <a href="">
-            <img src="images\\img3.jpg" alt="tablet in hand" width="370" />
+            <img src="./images/img3.jpg" alt="tablet in hand" width="370" />
           </a>
         </li>
       </ul>
@@ -93,22 +93,30 @@
         <li>
           <h2>Игорь Демьяненко</h2>
           <p>Product Designer</p>
-          <img src="images\\OT Igor.jpg" alt="Igor's portrate" width="270" />
+          <img src="./images/OT Igor.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Ольга Репина</h2>
           <p>Frontend Developer</p>
-          <img src="images\\OT Olga.jpg" alt="Igor's portrate" width="270" />
+          <img src="./images/OT Olga.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Николай Тарасов</h2>
           <p>Marketing</p>
-          <img src="images\\OT Nikolay.jpg" alt="Igor's portrate" width="270" />
+          <img
+            src="./images/OT Nikolay.jpg"
+            alt="Igor's portrate"
+            width="270"
+          />
         </li>
         <li>
           <h2>Михаил Ермаков</h2>
           <p>UI Designer</p>
-          <img src="images\\OT Mikhail.jpg" alt="Igor's portrate" width="270" />
+          <img
+            src="./images/OT Mikhail.jpg"
+            alt="Igor's portrate"
+            width="270"
+          />
         </li>
       </ul>
     </section>
