image names changes

--- a/index.html
+++ b/index.html
@@ -93,30 +93,22 @@
         <li>
           <h2>Игорь Демьяненко</h2>
           <p>Product Designer</p>
-          <img src="./images/OT Igor.jpg" alt="Igor's portrate" width="270" />
+          <img src="./images/OTIgor.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Ольга Репина</h2>
           <p>Frontend Developer</p>
-          <img src="./images/OT Olga.jpg" alt="Igor's portrate" width="270" />
+          <img src="./images/OTOlga.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Николай Тарасов</h2>
           <p>Marketing</p>
-          <img
-            src="./images/OT Nikolay.jpg"
-            alt="Igor's portrate"
-            width="270"
-          />
+          <img src="./images/OTNikolay.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Михаил Ермаков</h2>
           <p>UI Designer</p>
-          <img
-            src="./images/OT Mikhail.jpg"
-            alt="Igor's portrate"
-            width="270"
-          />
+          <img src="./images/OTMikhail.jpg" alt="Igor's portrate" width="270" />
         </li>
       </ul>
     </section>
