Added alt of img

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <!--Шапка-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <button type="button">Заказать услугу</button>
+
+        <!--<a href="">Заказать услугу</a> -->
       </section>
     </main>
 
@@ -98,17 +100,25 @@
         <li>
           <h2>Ольга Репина</h2>
           <p>Frontend Developer</p>
-          <img src="./images/OTOlga.jpg" alt="Igor's portrate" width="270" />
+          <img src="./images/OTOlga.jpg" alt="Olga's portrate" width="270" />
         </li>
         <li>
           <h2>Николай Тарасов</h2>
           <p>Marketing</p>
-          <img src="./images/OTNikolay.jpg" alt="Igor's portrate" width="270" />
+          <img
+            src="./images/OTNikolay.jpg"
+            alt="Nikolay's portrate"
+            width="270"
+          />
         </li>
         <li>
           <h2>Михаил Ермаков</h2>
           <p>UI Designer</p>
-          <img src="./images/OTMikhail.jpg" alt="Igor's portrate" width="270" />
+          <img
+            src="./images/OTMikhail.jpg"
+            alt="Mikhail's portrate"
+            width="270"
+          />
         </li>
       </ul>
     </section>
