--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework1</title>
+    <title lang="en">Homework1</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="/" lang="en">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -94,17 +94,17 @@
       <ul>
         <li>
           <h2>Игорь Демьяненко</h2>
-          <p>Product Designer</p>
+          <p lang="en">Product Designer</p>
           <img src="./images/OTIgor.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Ольга Репина</h2>
-          <p>Frontend Developer</p>
+          <p lang="en">Frontend Developer</p>
           <img src="./images/OTOlga.jpg" alt="Olga's portrate" width="270" />
         </li>
         <li>
           <h2>Николай Тарасов</h2>
-          <p>Marketing</p>
+          <p lang="en">Marketing</p>
           <img
             src="./images/OTNikolay.jpg"
             alt="Nikolay's portrate"
@@ -113,7 +113,7 @@
         </li>
         <li>
           <h2>Михаил Ермаков</h2>
-          <p>UI Designer</p>
+          <p lang="en">UI Designer</p>
           <img
             src="./images/OTMikhail.jpg"
             alt="Mikhail's portrate"
@@ -125,7 +125,7 @@
 
     <!--Подвал-->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="/" lang="en">WebStudio</a>
       <ul>
         <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
