--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title lang="en">Homework1</title>
+    <title>Homework1</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/" lang="en">WebStudio</a>
+        <a href="/">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -30,7 +30,7 @@
 
         <!--<a href="">Заказать услугу</a> -->
       </section>
-    </main>
+    
 
     <!--Особенности-->
     <section>
@@ -71,17 +71,17 @@
       <h2>Чем мы занимаемся</h2>
       <ul>
         <li>
-          <a href="">
+          <a href="#">
             <img src="./images/img1.jpg" alt="Note on tablet" width="370" />
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="#">
             <img src="./images/img2.jpg" alt="phone and notebook" width="370" />
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="#">
             <img src="./images/img3.jpg" alt="tablet in hand" width="370" />
           </a>
         </li>
@@ -94,17 +94,17 @@
       <ul>
         <li>
           <h2>Игорь Демьяненко</h2>
-          <p lang="en">Product Designer</p>
+          <p>Product Designer</p>
           <img src="./images/OTIgor.jpg" alt="Igor's portrate" width="270" />
         </li>
         <li>
           <h2>Ольга Репина</h2>
-          <p lang="en">Frontend Developer</p>
+          <p>Frontend Developer</p>
           <img src="./images/OTOlga.jpg" alt="Olga's portrate" width="270" />
         </li>
         <li>
           <h2>Николай Тарасов</h2>
-          <p lang="en">Marketing</p>
+          <p>Marketing</p>
           <img
             src="./images/OTNikolay.jpg"
             alt="Nikolay's portrate"
@@ -113,7 +113,7 @@
         </li>
         <li>
           <h2>Михаил Ермаков</h2>
-          <p lang="en">UI Designer</p>
+          <p>UI Designer</p>
           <img
             src="./images/OTMikhail.jpg"
             alt="Mikhail's portrate"
@@ -125,12 +125,13 @@
 
     <!--Подвал-->
     <footer>
-      <a href="/" lang="en">WebStudio</a>
+      <a href="/">WebStudio</a>
       <ul>
         <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
+    </main>
     </footer>
   </body>
 </html>
