--- a/index.html
+++ b/index.html
@@ -30,100 +30,104 @@
 
         <!--<a href="">Заказать услугу</a> -->
       </section>
-    
 
-    <!--Особенности-->
-    <section>
-      <ul>
-        <li>
-          <h2>Внимание к деталям</h2>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <h2>Пунктуальность</h2>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <h2>Планирование</h2>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-        </li>
-        <li>
-          <h2>Современные технологии</h2>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
-      </ul>
-    </section>
+      <!--Особенности-->
+      <section>
+        <ul>
+          <li>
+            <h2>Внимание к деталям</h2>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h2>Пунктуальность</h2>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h2>Планирование</h2>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h2>Современные технологии</h2>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <!--Чем мы занимаемся-->
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li>
-          <a href="#">
-            <img src="./images/img1.jpg" alt="Note on tablet" width="370" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/img2.jpg" alt="phone and notebook" width="370" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/img3.jpg" alt="tablet in hand" width="370" />
-          </a>
-        </li>
-      </ul>
-    </section>
+      <!--Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/img1.jpg" alt="Note on tablet" width="370" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/img2.jpg"
+                alt="phone and notebook"
+                width="370"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img3.jpg" alt="tablet in hand" width="370" />
+            </a>
+          </li>
+        </ul>
+      </section>
 
-    <!--Наша команда / Our team (OT)-->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <h2>Игорь Демьяненко</h2>
-          <p>Product Designer</p>
-          <img src="./images/OTIgor.jpg" alt="Igor's portrate" width="270" />
-        </li>
-        <li>
-          <h2>Ольга Репина</h2>
-          <p>Frontend Developer</p>
-          <img src="./images/OTOlga.jpg" alt="Olga's portrate" width="270" />
-        </li>
-        <li>
-          <h2>Николай Тарасов</h2>
-          <p>Marketing</p>
-          <img
-            src="./images/OTNikolay.jpg"
-            alt="Nikolay's portrate"
-            width="270"
-          />
-        </li>
-        <li>
-          <h2>Михаил Ермаков</h2>
-          <p>UI Designer</p>
-          <img
-            src="./images/OTMikhail.jpg"
-            alt="Mikhail's portrate"
-            width="270"
-          />
-        </li>
-      </ul>
-    </section>
+      <!--Наша команда / Our team (OT)-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <h2>Игорь Демьяненко</h2>
+            <p>Product Designer</p>
+            <img src="./images/OTIgor.jpg" alt="Igor's portrate" width="270" />
+          </li>
+          <li>
+            <h2>Ольга Репина</h2>
+            <p>Frontend Developer</p>
+            <img src="./images/OTOlga.jpg" alt="Olga's portrate" width="270" />
+          </li>
+          <li>
+            <h2>Николай Тарасов</h2>
+            <p>Marketing</p>
+            <img
+              src="./images/OTNikolay.jpg"
+              alt="Nikolay's portrate"
+              width="270"
+            />
+          </li>
+          <li>
+            <h2>Михаил Ермаков</h2>
+            <p>UI Designer</p>
+            <img
+              src="./images/OTMikhail.jpg"
+              alt="Mikhail's portrate"
+              width="270"
+            />
+          </li>
+        </ul>
+      </section>
 
-    <!--Подвал-->
+      <!--Подвал-->
+    </main>
     <footer>
       <a href="/">WebStudio</a>
       <ul>
@@ -131,7 +135,6 @@
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </main>
     </footer>
   </body>
 </html>
