--- a/index.html
+++ b/index.html
@@ -33,30 +33,31 @@
 
       <!--Особенности-->
       <section>
+        <h2>Особенности</h2>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -70,23 +71,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href="#">
-              <img src="./images/img1.jpg" alt="Note on tablet" width="370" />
-            </a>
+            <img src="./images/img1.jpg" alt="Note on tablet" width="370" />
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/img2.jpg"
-                alt="phone and notebook"
-                width="370"
-              />
-            </a>
+            <img src="./images/img2.jpg" alt="phone and notebook" width="370" />
           </li>
           <li>
-            <a href="#">
-              <img src="./images/img3.jpg" alt="tablet in hand" width="370" />
-            </a>
+            <img src="./images/img3.jpg" alt="tablet in hand" width="370" />
           </li>
         </ul>
       </section>
@@ -130,11 +121,24 @@
     </main>
     <footer>
       <a href="/">WebStudio</a>
-      <ul>
-        <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <address>
+        <!--  
+        <ul>
+          Киев, пр-т Леси Украинки, 26
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul> 
+        -->
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/YVmsHKJiKJfyMNRH6"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
