--- a/index.html
+++ b/index.html
@@ -87,32 +87,32 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <h2>Игорь Демьяненко</h2>
-            <p>Product Designer</p>
             <img src="./images/OTIgor.jpg" alt="Igor's portrate" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <h2>Ольга Репина</h2>
-            <p>Frontend Developer</p>
             <img src="./images/OTOlga.jpg" alt="Olga's portrate" width="270" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <h2>Николай Тарасов</h2>
-            <p>Marketing</p>
             <img
               src="./images/OTNikolay.jpg"
               alt="Nikolay's portrate"
               width="270"
             />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <h2>Михаил Ермаков</h2>
-            <p>UI Designer</p>
             <img
               src="./images/OTMikhail.jpg"
               alt="Mikhail's portrate"
               width="270"
             />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -131,7 +131,10 @@
         -->
         <ul>
           <li>
-            <a href="https://goo.gl/maps/YVmsHKJiKJfyMNRH6"
+            <a
+              href="https://goo.gl/maps/YVmsHKJiKJfyMNRH6"
+              target="blank"
+              rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
